# Spotify-E-Toggle

./: .gitignore  Makefile  README.md  pyproject.toml
spotify_e_toggle/: actions.py  spotify_client.py  toggle.py  track.py  types.py
tests/: test_spotify_e_toggle.py
