[tool.poetry]
name = "spotify-e-toggle"
version = "0.1.0"
description = ""
authors = ["Omar Khan <oakhan3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
spotipy = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
